<resources>
    <string name="app_name">LisaDuterteAndroidERestaurant</string>
    <string name="bienvenue">Bienvenue\nchez</string>

    <string name="entrees">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>

    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="alertMessage">Voulez vous ajouter cet article ?</string>
    <string name="panier">Panier</string>
    <string name="commander">Commander</string>
    <string name="commanderToast">Merci d\'avoir passer une commande chez nous</string>

    <string name="ble">BLE</string>
    <string name="bleMessage">Lancer le Scan BLE</string>
    <string name="bleMessageEnCours">Scan BLE en cours ...</string>
    <string name="blenondispo">BLE non disponible sur cet appareil</string>

    <string name="status">Status :</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="deviceUnknown">Device Unknown</string>
    <string name="defCharacteristique">Characteristique Spécifique</string>
    <string name="uuid">UUID : </string>
    <string name="proprietes">Propriétés : </string>
    <string name="valeur">Valeur : </string>
    <string name="lecture">LECTURE</string>
    <string name="ecrire">ECRIRE</string>
    <string name="notifier">NOTIFIER</string>

    <string name="ble_device_status">Status : %1$s</string>
    <string name="ble_device_status_connecting">Connexion en cours</string>
    <string name="ble_device_status_connected">Connecté</string>
    <string name="ble_device_status_disconnected">Déconnecté</string>
    <string name="ble_device_status_disconnecting">Déconnexion en cours</string>


    <string name="ble_device_write_characteristic_title">Ecrire la valeur</string>
    <string name="ble_device_write_characteristic_confirm">Valider</string>
    <string name="ble_device_write_characteristic_cancel">Annuler</string>
</resources>