<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/bienvenueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/nameText"
        app:layout_constraintEnd_toEndOf="@id/nameText"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bienvenueText"
        app:layout_constraintBottom_toBottomOf="@id/logoCuisto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoCuisto"/>

    <ImageView
        android:id="@+id/logoCuisto"
        android:layout_width="177dp"
        android:layout_height="181dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/logo_cuisto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logoCuisto"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/entreesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrees"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center"
            android:onClick="onClick"
            android:clickable="true"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/platsText"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/plats"
            android:textSize="40dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/desertsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desserts"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center"
            android:onClick="onClick"
            android:clickable="true"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>