<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ble.BleAdapter"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rssiText"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textSize="20dp"
            android:gravity="center"
            android:background="@drawable/roundedbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toTopOf="@id/itemView"
            app:layout_constraintBottom_toBottomOf="@id/itemView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/desserts"
            app:layout_constraintStart_toEndOf="@id/rssiText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toTopOf="@id/itemView"
            app:layout_constraintBottom_toTopOf="@id/uuid"/>
        <TextView
            android:id="@+id/uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/desserts"
            app:layout_constraintStart_toEndOf="@id/rssiText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintBottom_toBottomOf="@id/itemView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expanded_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/defCharacteristique"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/uuidExpanded"/>

        <TextView
            android:id="@+id/uuidExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uuid"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/def"
            app:layout_constraintBottom_toTopOf="@id/proprieteExpanded"/>

        <TextView
            android:id="@+id/proprieteExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proprietes"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uuidExpanded"
            app:layout_constraintBottom_toTopOf="@id/valeurExpanded" />

        <TextView
            android:id="@+id/valeurExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proprietes"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proprieteExpanded"
            app:layout_constraintBottom_toTopOf="@id/btnLecture" />

        <Button
            android:id="@+id/btnLecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/valeurExpanded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEcrire" />

        <Button
            android:id="@+id/btnEcrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecrire"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/valeurExpanded"
            app:layout_constraintBottom_toBottomOf="@+id/btnLecture"
            app:layout_constraintStart_toEndOf="@id/btnLecture"
            app:layout_constraintEnd_toStartOf="@+id/btnNotifier" />

        <Button
            android:id="@+id/btnNotifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifier"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/valeurExpanded"
            app:layout_constraintBottom_toBottomOf="@+id/btnEcrire"
            app:layout_constraintStart_toEndOf="@id/btnEcrire"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

</LinearLayout>